# teste_tecnico_AI

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
agent-service/: .env.example  Dockerfile  Makefile  pyproject.toml
agent-service/app/: __init__.py  agent.py  circuit_breaker.py  config.py  dataset_loader.py  extraction.py  handoff_packet.py  main.py  models.py  pii.py  quote_cache.py  quote_client.py  quote_estimator.py  recorder.py  store.py
agent-service/app/llm/: __init__.py  base.py  factory.py  prompts.py  providers.py  schemas.py
agent-service/scripts/: build_control_tower.py  build_trace_replay.py  demo_walkthrough.py  dev.ps1  http_e2e_smoke.py  llm_judge_eval.py  llm_provider_smoke.py  profile_dataset.py  replay_arena.py  run_acceptance_suite.py  run_chaos_matrix.py  run_eval_suite.py  security_scan.py  smoke_delivery.py
agent-service/tests/: test_acceptance_suite.py  test_agent_flow.py  test_agentic_llm_flow.py  test_chaos_matrix.py  test_circuit_breaker.py  test_conversation_store.py  test_dataset_ops.py  test_demo_walkthrough.py  test_eval_suite.py  test_extraction.py  test_http_e2e_smoke.py  test_llm_guardrails.py  test_llm_judge_optional.py  test_llm_provider_factory.py  test_llm_provider_smoke.py  test_ops_metrics.py  test_quote_cache_estimator.py  test_quote_client.py  test_security_scan.py  test_smoke_delivery.py  test_trace_replay.py
docs/: AGENTIC_LLM_DESIGN.md  ARCHITECTURE.md  BASELINE.md  CALIBRATION_RUN.md  DOSSIE_TECNICO_AUTOSEGURO.md  EVALUATION.md  FRESH_CLONE_CHECKLIST.md  PRODUCTIONIZATION_ROADMAP.md  REVIEW_GUIDE.md  (+1 more)
(+1 files in other folders)
